...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcv_recent_lesson_menu"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...

    </android.support.v7.widget.RecyclerView>



    <Button
        android:id="@+id/btn_recent_lesson_back"
        android:layout_width="73dp"
        android:layout_height="100dp"
        android:layout_margin="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
...
