...
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_background_search"
            app:layout_constraintVertical_bias="0.0">

            <ImageButton
                android:id="@+id/btn_lesson"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:background="@drawable/lesson_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.023"
...
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintVertical_bias="0.0">

            <ImageButton
                android:id="@+id/btn_recent_lesson"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:background="@drawable/recent_lesson_icon" />

            <TextView
                android:id="@+id/txt_recent_lesson"
...
